# kaa

./: .gitignore  LICENSE  README.md  cli_run.sh  pyproject.toml  requirements.txt  runner.sh
kaa/: __init__.py  entrypoint.py  parser.py  sitter_util.py  spc.py
tests/: fixtures.py  test_entrypoint.py  test_kaa.py  test_parse_source.py  test_parser.py  test_read_source.py  test_sitter_util.py  test_spc.py
tests/test_data/: classes_one_if.cpp  complex.cpp  extended_switch.cpp  high_spc.cpp  lambda_one_if.cpp  main.cpp  multiple.cpp  one_dowhile.cpp  one_for.cpp  one_if.cpp  one_switch.cpp  one_ternary.cpp  one_while.cpp  operator.cpp  operator_cast.cpp  qac_example.cpp  simple.cpp  two_ifs.cpp  z_example_gilded_rose.cpp  z_example_simple.cpp  z_example_tennis1.cpp  z_example_tennis2.cpp  z_example_tennis3.cpp
