[tool.poetry]
name = "kaa"
version = "0.1.0"
description = "C++ static path counting tool"
authors = ["Richard Fabian <raspo1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
tree-sitter = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
